SERVER-57321 ModMatchExpression returns false when dividend cannot be represented as a valid integer